--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,22 +5,21 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
 
 WORKDIR /app
 
-# System deps (falls pandas/Numpy/fastf1 sie brauchen)
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential gcc libatlas-base-dev gfortran wget && \
-    rm -rf /var/lib/apt/lists/*
+# pip aktualisieren (holt stabile Wheels für numpy/pandas)
+RUN python -m pip install --upgrade pip
 
-# Requirements
+# Requirements zuerst kopieren → bessere Layer-Caches
 COPY backend/requirements.txt /app/requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
 
-# App code
+# Nur Wheels verwenden, keine Source-Builds (kein gcc nötig)
+RUN pip install --no-cache-dir --only-binary=:all: -r requirements.txt
+
+# App-Code kopieren
 COPY backend/ /app/
 
-# FastF1 Cache Pfad via ENV (dein Code sollte das nutzen!)
+# Cache-Pfade
 ENV FASTF1_CACHE=/data/fastf1_cache
 VOLUME ["/data/fastf1_cache", "/app/app/season_cache"]
 
 EXPOSE 8000
-
 CMD ["uvicorn", "app.main:app", "--host=0.0.0.0", "--port=8000"]
