--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,10 @@ version: "3.9"
 
 services:
   backend:
-    build:
-      context: .
-      dockerfile: backend/Dockerfile
+    image: claudio08092002/gridstats:latest         # Backend-Image aus Registry
     container_name: gridstats-backend
-    env_file: .env
     environment:
-      - FASTF1_CACHE=${FASTF1_CACHE:-/data/fastf1_cache}
+      - FASTF1_CACHE=/data/fastf1_cache
       - UVICORN_HOST=0.0.0.0
       - UVICORN_PORT=8000
     volumes:
@@ -16,22 +13,14 @@ services:
       - season_cache:/app/app/season_cache
     expose:
       - "8000"
-    # optional, wenn du vom Host direkt testen willst:
-    # ports:
-    #   - "8000:8000"
+    restart: unless-stopped
 
   frontend:
-    build:
-      context: .
-      dockerfile: frontend/Dockerfile
-      args:
-        ANGULAR_PROJECT=${ANGULAR_PROJECT:-frontend}
+    image: claudio08092002/gridstats-frontend:latest # Frontend-Image aus Registry
     container_name: gridstats-frontend
-    depends_on:
-      - backend
     ports:
-      - "80:80"
-    # NGINX_BACKEND_URL wird in der conf nicht genutzt → kann weg
+      - "80:80"                                      # oder weglassen, wenn dein externes Proxy-GUI mapped
+    restart: unless-stopped
 
 volumes:
   fastf1_cache:
