--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -22,4 +22,4 @@ ENV FASTF1_CACHE=/data/fastf1_cache
 VOLUME ["/data/fastf1_cache", "/app/app/season_cache"]
 
 EXPOSE 8000
-CMD ["uvicorn", "app.main:app", "--host=0.0.0.0", "--port=8000"]
+CMD ["uvicorn", "app.main:app", "--host=0.0.0.0", "--port=8000", "--access-log"]
