--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "d3": "^7.9.0",
     "chart.js": "^4.5.0",
     "express": "^5.1.0",
+    "flag-icons": "^7.2.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "^0.15.1"
